--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coming Soon</title>
+    <title>stay tuned</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
     <!-- Logo and Heading -->
     <div class="logo-container">
       <img src="https://assets.codepen.io/13896505/Version+2.png" alt="Logo" id="logo" />
-      <h1>Coming Soon</h1>
+      <h1>stay tuned</h1>
     </div>
     
     <script src="script.js"></script>
