--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     
     <!-- Logo and Heading -->
     <div class="logo-container">
-      <img src="https://assets.codepen.io/13896505/Version+2.png" alt="Logo" id="logo" />
+      <img
+        src="https://assets.codepen.io/13896505/Version+2.png"
+        alt="Logo"
+        id="logo"
+      />
       <h1>stay tuned</h1>
     </div>
     
     <script src="script.js"></script>
   </body>
 </html>
+
