--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Logo and Heading -->
     <div class="logo-container">
       <img
-        src="https://assets.codepen.io/13896505/Version+2.png"
+        src="img/logo.png"
         alt="Logo"
         id="logo"
       />
